Enable client script protocol